--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,88 +1,41 @@
 name: Build
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
-  schedule:
-    - cron: '0 3 * * *'
 
 jobs:
-  cri:
+  docker-build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        train:
-          - stable
-          - testing
-        include:
-          - train: stable
-            tags: |
-              latest
-              stable
-          - train: testing
-            tags: |
-              testing
     steps:
+      # Prepare source code
       - name: Git checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: '0'
 
+      # Prepare environment
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-        with:
-          platforms: arm64
+        uses: docker/setup-qemu-action@v3
       
-      - name: Discover upstream version
-        uses: ropenttd/cdn_version_scraper@master
-        with:
-          channel: ${{ matrix.train }}
-        id: version
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Generate CRI metadata
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: |
-            ghcr.io/${{ github.repository_owner }}/openttd
-            docker.io/redditopenttd/openttd
-          labels: |
-            org.opencontainers.image.title=OpenTTD
-            org.opencontainers.image.description=Lightweight build of OpenTTD, designed for server use, with some extra helping treats.
-            org.opencontainers.image.url=https://github.com/ropenttd/docker_openttd
-            org.opencontainers.image.source=https://github.com/openttd/openttd
-            org.opencontainers.image.vendor=Reddit OpenTTD
-            org.opencontainers.image.version=${{ steps.version.outputs.version }}
-          tags: |
-            ${{ matrix.tags }}
-            ${{ steps.version.outputs.version }}
-            ${{ steps.version.outputs.semver_major }}
-      
-      - name: Set up Buildx
-        uses: docker/setup-buildx-action@v2
-      
-      - name: Login to GHCI
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASS }}
+      
+      # Build and publish
       - name: Build and push
-        uses: docker/build-push-action@v4
+        uses: docker/build-push-action@v5
         with:
-          builder: ${{ steps.buildx.outputs.name }}
           context: .
-          file: ./Dockerfile
           build-args: |
-            OPENTTD_VERSION=${{ steps.version.outputs.version }}
-          platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+            OPENTTD_VERSION=${{ env.OPENTTD_VERSION }}
+          platforms: linux/386, linux/amd64, linux/arm/v6, linux/arm/v7, linux/arm64/v8
+          push: true
+          tags: ${{ secrets.DOCKER_USER }}/openttd-server:latest
