fix: action variables

--- a/.github/workflows/manual-build.yml
+++ b/.github/workflows/manual-build.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           context: .
           build-args: |
-            OPENTTD_VERSION=${{ env.OPENTTD_VERSION }}
-          platforms: ${{ env.ARCH }}
+            OPENTTD_VERSION=${{ vars.OPENTTD_VERSION }}
+          platforms: ${{ vars.ARCH }}
           push: true
-          tags: ${{ secrets.DOCKER_USER }}/openttd-server:manual-${{ env.ARCH }}
+          tags: ${{ secrets.DOCKER_USER }}/openttd-server:manual-${{ vars.ARCH }}
