fix: action variables

--- a/.github/workflows/manual-build.yml
+++ b/.github/workflows/manual-build.yml
@@ -35,4 +35,4 @@ jobs:
             OPENTTD_VERSION=${{ vars.OPENTTD_VERSION }}
           platforms: ${{ vars.ARCH }}
           push: true
-          tags: ${{ secrets.DOCKER_USER }}/openttd-server:manual-${{ vars.ARCH }}
+          tags: ${{ secrets.DOCKER_USER }}/openttd-server:manual
